--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,10 @@
 language: go
 go:
- - 1.5
  - tip
+
+before_install:
+ - sudo apt-get install libsdl2-dev
+ - sudo apt-get install libsdl2-mixer-dev
 
 install:
  - go get github.com/veandco/go-sdl2/sdl
