--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,12 @@ install:
     - msiexec /i go1.6.3.windows-amd64.msi /q
     - go version
     - go env
+    
+install:
+    - curl -fsS -o setup.exe http://www.jrsoftware.org/download.php/ispack-unicode.exe
+    - setup.exe /SILENT
+    - appveyor DownloadFile https://drive.google.com/open?id=0BwNOhD4ZlgzGMWg1dkMtZ0JUYms
+    - 7zip.exe e -o c:\gopath\src\github.com\andreas-jonsson\openwar\tools\package\dependencies dependencies.7z
 
 build_script:
     - go get
