--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,10 +21,10 @@ install:
     # - setup.exe /SILENT
     
     - appveyor DownloadFile https://drive.google.com/open?id=0BwNOhD4ZlgzGMWg1dkMtZ0JUYms
-    - 7z.exe e -o c:\gopath\src\github.com\andreas-jonsson\openwar\tools\package\dependencies dependencies.7z
+    - 7z.exe x dependencies.7z -o c:\gopath\src\github.com\andreas-jonsson\openwar\tools\package\dependencies
     
     - appveyor DownloadFile https://drive.google.com/open?id=0BwNOhD4ZlgzGaUx2VWp0VXlUalU
-    - 7z.exe e -o c:\TDM-GCC-64 TDM-GCC-64.7z
+    - 7z.exe x TDM-GCC-64.7z -o c:\TDM-GCC-64
 
 build_script:
     - go get
