--- a/appveyor.yml
+++ b/appveyor.yml
@@ -21,13 +21,19 @@ install:
     # - setup.exe /SILENT
 
     - appveyor DownloadFile https://github.com/andreas-jonsson/openwar/raw/master/tools/package/dependencies.7z
-    - 7z.exe x dependencies.7z -oc:\gopath\src\github.com\andreas-jonsson\openwar\tools\package
+    - 7z x dependencies.7z -oc:\gopath\src\github.com\andreas-jonsson\openwar\tools\package
 
     - appveyor DownloadFile https://github.com/andreas-jonsson/openwar/raw/master/tools/build/TDM-GCC-64.7z
-    - 7z.exe x TDM-GCC-64.7z -oc:\
+    - 7z x TDM-GCC-64.7z -oc:\
     - set PATH=%PATH%;c:\TDM-GCC-64\bin
 
 build_script:
     - go get
     - go build openwar.go
     - go test ./...
+
+after_build:
+    - 7z a openwar.zip openwar.exe tools\package\dependencies data
+
+artifacts:
+    - path: openwar.zip
