--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,6 +14,7 @@ environment:
 install:
     - set PATH=c:\msys64\usr\bin;c:\msys64\mingw64\bin;%PATH%
     - set PKG_CONFIG_PATH=%PKG_CONFIG_PATH%:/mingw64/lib/pkgconfig
+    - bash -c "pacman -Syu"
     - bash -c "pacman --noconfirm -S mingw-w64-x86_64-toolchain mingw-w64-x86_64-gtk2 mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer"
 
     # - curl -fsS -o setup.exe http://www.jrsoftware.org/download.php/ispack-unicode.exe
