--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,7 +14,7 @@ environment:
 install:
     - set PATH=c:\msys64\usr\bin;c:\msys64\mingw64\bin;%PATH%
     - set PKG_CONFIG_PATH=%PKG_CONFIG_PATH%:/mingw64/lib/pkgconfig
-    - bash -c "pacman -Syu"
+    - bash -c "pacman --noconfirm -Syu"
     - bash -c "pacman --noconfirm -S mingw-w64-x86_64-toolchain mingw-w64-x86_64-gtk2 mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer"
 
     # - curl -fsS -o setup.exe http://www.jrsoftware.org/download.php/ispack-unicode.exe
@@ -26,7 +26,7 @@ install:
     - go env
 
     - appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/dependencies.7z
-    - 7z e dependencies.7z -oc:\gopath\src\github.com\andreas-jonsson\openwar\tools\package -aoa
+    - 7z e dependencies.7z -oc:\gopath\src\github.com\andreas-jonsson\openwar\tools\package
 
     #- appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/msys64.7z
     #- del /F /S /Q c:\msys64
