--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,10 +14,20 @@ environment:
 install:
     - set PATH=c:\msys64\usr\bin;c:\msys64\mingw64\bin;%PATH%
     - set PKG_CONFIG_PATH=%PKG_CONFIG_PATH%:/mingw64/lib/pkgconfig
-    - bash -c "pacman --noconfirm -Sy pacman"
-    - bash -c "pacman --noconfirm -Syu"
-    - bash -c "pacman --noconfirm -Su"
-    - bash -c "pacman --noconfirm -S mingw-w64-x86_64-toolchain mingw-w64-x86_64-gtk2 mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer"
+    # - bash -c "pacman --noconfirm -Sy pacman"
+    # - bash -c "pacman --noconfirm -Syu"
+    # - bash -c "pacman --noconfirm -Su"
+    # - bash -c "pacman --noconfirm -S mingw-w64-x86_64-toolchain mingw-w64-x86_64-gtk2 mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer"
+    # - bash -c "pacman --noconfirm -S mingw-w64-x86_64-gtk2 mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer"
+    - bash -c "pacman --noconfirm -S mingw-w64-x86_64-gtk2"
+
+    - appveyor DownloadFile https://www.libsdl.org/release/SDL2-devel-2.0.4-mingw.tar.gz
+    - 7z e SDL2-devel-2.0.4-mingw.tar.gz
+    - bash "cd SDL2* && ./configure && make && make install"
+
+    - appveyor DownloadFile https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-devel-2.0.1-mingw.tar.gz
+    - 7z e SDL2_mixer-devel-2.0.1-mingw.tar.gz
+    - bash "cd SDL2_mixer* && ./configure && make && make install"
 
     # - curl -fsS -o setup.exe http://www.jrsoftware.org/download.php/ispack-unicode.exe
     # - setup.exe /verysilent /noreboot
