--- a/appveyor.yml
+++ b/appveyor.yml
@@ -22,11 +22,11 @@ install:
     - bash -c "pacman --noconfirm -S mingw-w64-x86_64-gtk2"
 
     - appveyor DownloadFile https://www.libsdl.org/release/SDL2-2.0.4.zip
-    - 7z e SDL2-2.0.4.zip
+    - 7z e SDL2-2.0.4.zip -aoa
     - bash "cd SDL2* && ./configure && make && make install"
 
     - appveyor DownloadFile https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.1.zip
-    - 7z e SDL2_mixer-2.0.1.zip
+    - 7z e SDL2_mixer-2.0.1.zip -aoa
     - bash "cd SDL2_mixer* && ./configure && make && make install"
 
     # - curl -fsS -o setup.exe http://www.jrsoftware.org/download.php/ispack-unicode.exe
