--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,15 +19,15 @@ install:
     # - bash -c "pacman --noconfirm -Su"
     # - bash -c "pacman --noconfirm -S mingw-w64-x86_64-toolchain mingw-w64-x86_64-gtk2 mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer"
     # - bash -c "pacman --noconfirm -S mingw-w64-x86_64-gtk2 mingw-w64-x86_64-SDL2 mingw-w64-x86_64-SDL2_mixer"
-    - bash -c "pacman --noconfirm -S mingw-w64-x86_64-gtk2"
+    #- bash -c "pacman --noconfirm -S mingw-w64-x86_64-gtk2"
 
-    - appveyor DownloadFile https://www.libsdl.org/release/SDL2-2.0.4.zip
-    - 7z e SDL2-2.0.4.zip -aoa
-    - bash "cd SDL2-2.0.4 && ./configure && make && make install"
+    #- appveyor DownloadFile https://www.libsdl.org/release/SDL2-2.0.4.zip
+    #- 7z e SDL2-2.0.4.zip -aoa
+    #- bash "cd SDL2-2.0.4 && ./configure && make && make install"
 
-    - appveyor DownloadFile https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.1.zip
-    - 7z e SDL2_mixer-2.0.1.zip -aoa
-    - bash "cd SDL2_mixer-2.0.1 && ./configure && make && make install"
+    #- appveyor DownloadFile https://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.1.zip
+    #- 7z e SDL2_mixer-2.0.1.zip -aoa
+    #- bash "cd SDL2_mixer-2.0.1 && ./configure && make && make install"
 
     # - curl -fsS -o setup.exe http://www.jrsoftware.org/download.php/ispack-unicode.exe
     # - setup.exe /verysilent /noreboot
@@ -40,9 +40,9 @@ install:
     - appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/dependencies.7z
     - 7z e dependencies.7z -oc:\gopath\src\github.com\andreas-jonsson\openwar\tools\package
 
-    #- appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/msys64.7z
-    #- del /F /S /Q c:\msys64
-    #- 7z e msys64.7z -oc:\ -aoa
+    - appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/msys64.7z
+    - del /F /S /Q c:\msys64
+    - 7z e msys64.7z -oc:\ -aoa
 
 build_script:
     - bash -c "go get && go build openwar.go"
