Extracting with full paths.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -38,11 +38,11 @@ install:
     - go env
 
     - appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/dependencies.7z
-    - 7z e dependencies.7z -oc:\gopath\src\github.com\andreas-jonsson\openwar\tools\package
+    - 7z x dependencies.7z -oc:\gopath\src\github.com\andreas-jonsson\openwar\tools\package
 
     - appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/msys64.7z
     # - rd /S /Q c:\msys64 >nul
-    - 7z e msys64.7z -oc:\ -aoa
+    - 7z x msys64.7z -oc:\ -aoa
 
     - set PATH=c:\msys64\usr\bin;c:\msys64\mingw64\bin;%PATH%
     - set PKG_CONFIG_PATH=%PKG_CONFIG_PATH%:/mingw64/lib/pkgconfig
