Changed output name.

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -34,8 +34,9 @@ build_script:
     - bash -c "go get && go build openwar.go"
 
 after_build:
-    - iscc /Qp /O".\" /Fopenwar-%APPVEYOR_BUILD_VERSION%-win64 tools\package\setup.iss
+    # - iscc /Qp /O".\" /Fopenwar-%APPVEYOR_BUILD_VERSION%-win64 tools\package\setup.iss
+    - iscc /Qp /O".\" tools\package\setup.iss
 
 artifacts:
-    - path: openwar-%APPVEYOR_BUILD_VERSION%-win64.exe
-        name: openwar
+    # - path: openwar-%APPVEYOR_BUILD_VERSION%-win64.exe
+    - path: openwar-0.0.1-win64.exe
