--- a/tools/package/openwar_0.0.1-x/DEBIAN/control
+++ b/tools/package/openwar_0.0.1-x/DEBIAN/control
@@ -3,7 +3,7 @@ Version: 0.0.1-e34f19fc-199d-4fb9-b334-aed07b29a173
 Section: base
 Priority: optional
 Architecture: amd64
-Depends: libgtk2.0-0, libsdl2-2.0-0 (>= 2.0.4), libsdl2-mixer-2.0-0 (>= 2.0.1)
+Depends: libgtk2.0-0, libglib2.0-0, libsdl2-2.0-0 (>= 2.0.4), libsdl2-mixer-2.0-0 (>= 2.0.1)
 Maintainer: Andreas T Jonsson <mail@andreasjonsson.se>
 Description: Alternative Warcraft: Orcs & Humans game engine.
  OpenWar is an alternative Warcraft: Orcs & Humans game engine. So unless you have a legal copy of
