--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,10 @@ language: go
 
 go:
     - 1.6
-    - tip
+    # - tip
 
 before_install:
+    - sudo apt-get install -y rpl
     - wget -q http://www.libsdl.org/release/SDL2-2.0.3.tar.gz
     - tar xf SDL2-*.tar.gz
     - (cd SDL2-* && ./configure && make && sudo make install)
