--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,8 @@ go:
     # - tip
 
 before_install:
+    - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~\/.dropbox_uploader -d'
+
     - sudo apt-get install -y rpl
     - wget -q http://www.libsdl.org/release/SDL2-2.0.3.tar.gz
     - tar xf SDL2-*.tar.gz
@@ -19,4 +21,7 @@ install:
 script:
     - go build openwar.go
     - go test -v ./...
+
     - ./tools/package/build_deb.sh
+    # - ./tools/dropbox/dropbox_uploader.sh upload openwar_0.0.1-$TRAVIS_BUILD_NUMBER Public/openwar_0.0.1-$TRAVIS_BUILD_NUMBER.deb
+    - ./tools/dropbox/dropbox_uploader.sh upload openwar_0.0.1-$TRAVIS_BUILD_NUMBER Public/openwar_0.0.1.deb
