--- a/.travis.yml
+++ b/.travis.yml
@@ -11,15 +11,8 @@ os:
 before_install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
 
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk+; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl; fi
-
-    - wget -q http://www.libsdl.org/release/SDL2-2.0.3.tar.gz
-    - tar xf SDL2-*.tar.gz
-    - (cd SDL2-* && ./configure && make && sudo make install)
-    - wget -q http://www.libsdl.org/projects/SDL_mixer/release/SDL2_mixer-2.0.1.tar.gz
-    - tar xf SDL2_mixer-*.tar.gz
-    - (cd SDL2_mixer-* && ./configure && make && sudo make install)
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install gtk+ sdl2 sdl2_mixer; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl && ./tools/sdl_from_source.sh; fi
 
 install:
     - go get
