--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ os:
 before_install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
 
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install p7zip gtk+ sdl2 sdl2_mixer; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install p7zip dylibbundler gtk+ sdl2 sdl2_mixer; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl && ./tools/sdl_from_source.sh; fi
 
 install:
