--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,11 @@ os:
     - linux
     - osx
 
+notifications:
+    email:
+        on_success: never
+        on_failure: always
+
 before_install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
 
