Updated OSX build system to use jhbuild.

--- a/tools/package/app-bundler/Info.plist
+++ b/tools/package/app-bundler/Info.plist
@@ -14,6 +14,8 @@
     <string>io.openwar.OpenWar</string>
     <key>CFBundleInfoDictionaryVersion</key>
     <string>6.0</string>
+    <key>CFBundleName</key>
+    <string>OpenWar</string>
     <key>CFBundlePackageType</key>
     <string>APPL</string>
     <key>CFBundleShortVersionString</key>
