Added build short-path.

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,9 @@ install:
 
 script:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/setup_jhbuild.sh; fi
+    # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/download_jhbuild.sh; fi
+
+
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then jhbuild run ./tools/package/build_app.sh; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/dropbox/dropbox_uploader.sh upload OpenWar.zip Public/OpenWar.zip; fi
 
