--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ notifications:
 install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
 
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install p7zip; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew install p7zip watch; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl && export SDL_PREFIX=/usr/local && ./tools/sdl_from_source.sh; fi
 
 script:
