--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,10 @@ notifications:
         on_failure: always
         on_start: never
 
+branches:
+    only:
+        - master
+
 install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
 
