--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/download_jhbuild.sh; fi
     # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/revive_jhbuild.sh; fi
 
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./.local/bin/jhbuild run ./tools/package/build_app.sh; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then $HOME/.local/bin/jhbuild run ./tools/package/build_app.sh; fi
     - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/dropbox/dropbox_uploader.sh upload OpenWar.zip Public/OpenWar.zip; fi
 
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get && go build openwar.go && go test -v ./...; fi
