--- a/.travis.yml
+++ b/.travis.yml
@@ -13,13 +13,6 @@ notifications:
         on_success: never
         on_failure: always
 
-    webhooks:
-        urls:
-            - https://webhooks.gitter.im/e/33fa78a44d476a8bf7af
-        on_success: change
-        on_failure: always
-        on_start: never
-
 branches:
     only:
         - master
@@ -27,17 +20,11 @@ branches:
 install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
 
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install p7zip; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update && brew tap andreas-jonsson/tap; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get install -y rpl && export SDL_PREFIX=/usr/local && ./tools/sdl_from_source.sh; fi
 
 script:
-    # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/setup_jhbuild.sh; fi
-    # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/upload_jhbuild.sh; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/download_jhbuild.sh; fi
-    # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/package/revive_jhbuild.sh; fi
-
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then $HOME/.local/bin/jhbuild run ./tools/package/build_app.sh; fi
-    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then ./tools/dropbox/dropbox_uploader.sh upload OpenWar.zip Public/OpenWar.zip; fi
+    - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install openwar; fi
 
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get && go build openwar.go && go test -v ./...; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/package/build_deb.sh && ./tools/dropbox/dropbox_uploader.sh upload openwar_0.0.1-$TRAVIS_BUILD_NUMBER.deb Public/openwar_0.0.1.deb; fi
