--- a/appveyor.yml
+++ b/appveyor.yml
@@ -25,11 +25,13 @@ install:
 
     - appveyor DownloadFile https://dl.dropboxusercontent.com/u/1955192/TDM-GCC-64.7z
     - 7z x TDM-GCC-64.7z -oc:\
-    
-    - set PATH="c:\Program Files (x86)\Inno Setup 5";c:\TDM-GCC-64\bin;%PATH%
+
+    - set PATH="c:\Program Files (x86)\Inno Setup 5";"%GOPATH%\bin";c:\TDM-GCC-64\bin;%PATH%
 
 build_script:
-    - bash -c "go get && go build openwar.go"
+    - go get github.com/akavel/rsrc
+    - rsrc -ico=tools/package/icon.ico -arch=amd64
+    - bash -c "go get && go build -ldflags=\"-H windowsgui\""
 
 after_build:
     # - iscc /Qp /O".\" /Fopenwar-%APPVEYOR_BUILD_VERSION%-win64 tools\package\setup.iss
