--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,9 @@ notifications:
 branches:
     only:
         - master
+        
+env:
+    - OPENWAR_VERSION=0.0.1
 
 install:
     - '[ "$TRAVIS_SECURE_ENV_VARS" == "false" ] || openssl aes-256-cbc -K $encrypted_2a6a96d3c45a_key -iv $encrypted_2a6a96d3c45a_iv -in tools/dropbox/.dropbox_uploader.enc -out ~/.dropbox_uploader -d'
@@ -28,7 +31,7 @@ script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then go get && go build; fi
     
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/package/build_deb.sh; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar_0.0.1-$TRAVIS_BUILD_NUMBER.deb Public/openwar_0.0.1.deb; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb Public/openwar_$OPENWAR_VERSION.deb; fi
     
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then mv openwar_0.0.1-*.deb openwar_0.0.1.deb && sudo alien -v -r openwar_0.0.1.deb; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar_0.0.1.x86_64.rpm Public/openwar_0.0.1.x86_64.rpm; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo alien -v -r openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb && mv openwar_$OPENWAR_VERSION-*.x86_64.rpm openwar_$OPENWAR_VERSION.x86_64.rpm; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar_$OPENWAR_VERSION.x86_64.rpm Public/openwar_$OPENWAR_VERSION.x86_64.rpm; fi
