--- a/.travis.yml
+++ b/.travis.yml
@@ -33,8 +33,8 @@ script:
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/package/build_deb.sh; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb Public/openwar_$OPENWAR_VERSION.deb; fi
     
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo alien -v -k -r openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo alien -k -r openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb; fi
     - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar-$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.x86_64.rpm Public/openwar-$OPENWAR_VERSION.x86_64.rpm; fi
 
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo alien -v -k -t openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb; fi
-    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar-$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.tgz Public/openwar-$OPENWAR_VERSION.tgz; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo alien -t openwar_$OPENWAR_VERSION-$TRAVIS_BUILD_NUMBER.deb; fi
+    - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then ./tools/dropbox/dropbox_uploader.sh upload openwar-$OPENWAR_VERSION.tgz Public/openwar-$OPENWAR_VERSION.tgz; fi
