--- a/appveyor.yml
+++ b/appveyor.yml
@@ -29,9 +29,10 @@ install:
     - set PATH="c:\Program Files (x86)\Inno Setup 5";"%GOPATH%\bin";c:\TDM-GCC-64\bin;%PATH%
 
 build_script:
+    - go get
     - go get github.com/akavel/rsrc
     - rsrc -ico=tools/package/icon.ico -arch=amd64
-    - bash -c "go get && go build -ldflags=\"-H windowsgui\""
+    - go build -ldflags="-H windowsgui"
 
 after_build:
     # - iscc /Qp /O".\" /Fopenwar-%APPVEYOR_BUILD_VERSION%-win64 tools\package\setup.iss
